
**Note: You can revisit these release notes by clicking the button in the setup form within the General -> H/W Select tab.**


Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/issues/new/choose).

## v2.10.3.6 Change Log - WIP dev
- [fix] vac mic audio source can now be recorded

## v2.10.3.5 Change Log
- [add] midi device DJ2GO2 Touch MIDI is now handled uniquely, and main sliders will have values reversed
- [add] mox/ptt time out timer functionality in Options2 tab
- [add] amp view will restore size if set to 'show on startup'
- [add] new Cat/Midi support for Quick Play/Record by Sigi DH1KLM
	- ZZQA 1/0 QuickPlay
	- ZZQB 1/0 QuickRecord
- [add] new option to apply 31dB tx attenuation when output power is increased and PS-A is on
- [add] dBm text colour appearance option for noise floor line
- [add] option to show/hide multimeter containers
- [add] can now use vsql from andromeda analogue slider window. The sql buttons are now tri state, sqloff, sql, vsql
- [add] cmASIO feature for 'power users'. See included documentation in the install folder/start menu. Bryan W4WMT
- [add] cmASIO icon on status bar. Green if ok and in use. Red if there is a problem.
- [add] someone in red might show up when it snows from now until the 26th Dec
- [add] option in VAC1 to cause VOX to use MIC instead of VAC
- [add] option to stop RX1/2 waterfall on TX
- [add] status bar icons for tci, cat serial, cat tcp/ip, n1mm
- [add] option in options2 tab to auto power on at startup
- [add] buttons [=] for RX1/RX2 waterfall and spectrum grid to copy current low/high min/max to all other bands
- [fix] lin waterfall palettes should now look better
- [fix] fix an issue which would prevent manually changing TX filter in setup form, it would try to 'validate' whilst typing new value
- [fix] fix collapsed andromeda sql gain sliders from behaving erratically
- [fix] thin notches would not clear single pixel carriers from waterfall if visual approximation was used