@@ -121,7 +121,7 @@ PORT void xvacIN(int id, double* in_tx, int bypass)
 		{
 			xrmatchOUT (a->rmatchIN, in_tx);
 			if (a->vac_combine_input)
-				combinebuff(a->mic_size, in_tx, in_tx);
+				combinebuff(a->mic_size, in_tx, in_tx, 3);
 			scalebuff(a->mic_size, in_tx, a->vac_preamp, in_tx);
 		}
 		else
@@ -548,11 +548,32 @@ PORT void SetIVACcombine(int id, int combine)
 	a->vac_combine_input = combine;
 }
 
-void combinebuff(int n, double* a, double* combined)
+void combinebuff(int n, double* a, double* combined, int combineMode)
 {
+	//default - silence
+	//1 - ch1
+	//2 - ch2
+	//3 - combine ch1+ch2
 	int i;
-	for (i = 0; i < 2 * n; i += 2)
-		combined[i] = combined[i + 1] = a[i] + a[i + 1];
+	switch (combineMode)
+	{
+		case 1:
+			for (i = 0; i < 2 * n; i += 2)
+				combined[i] = combined[i + 1] = a[i];
+			break;
+		case 2:
+			for (i = 0; i < 2 * n; i += 2)
+				combined[i] = combined[i + 1] = a[i + 1];
+			break;
+		case 3:
+			for (i = 0; i < 2 * n; i += 2)
+				combined[i] = combined[i + 1] = a[i] + a[i + 1];
+			break;
+		default:
+			for (i = 0; i < 2 * n; i += 2)
+				combined[i] = combined[i + 1] = 0.0;
+			break;
+	}
 }
 
 void scalebuff(int size, double* in, double scale, double* out)
